--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body, html{
     font-weight: 400;
     line-height: 1.8em;
     color: #666;
+    scroll-behavior: smooth;
 }
 .navbar{
     background-color: #F5F0E9 !important;
