--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ body, html{
 .container a:hover{
     color: #404A3D;
 }
+.container button{
+    background-color: #4B634A;
+}
 li{
     color: #4B634A;
 }
