--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -16,6 +16,9 @@ body, html{
 .container a:hover{
     color: #404A3D;
 }
+.container button{
+    background-color: #4B634A;
+}
 li{
     color: #4B634A;
 }
@@ -50,6 +53,4 @@ footer .copyright:hover{
     max-width: 300px;
     border: 0;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+ 
