--- a/css/detail.css
+++ b/css/detail.css
@@ -42,5 +42,9 @@ li{
     font-size: 15px;
     display: inline-block;
 }
+.responsive{
+    width: 100%;
+    height: auto
+}
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
