fixed img sizes

--- a/css/detail.css
+++ b/css/detail.css
@@ -43,7 +43,7 @@ li{
     display: inline-block;
 }
 .responsive{
-    width: 100%;
+    max-width: 100%;
     height: auto
 }
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
